# hrss

./: .gitignore  LICENSE.txt  hrss.cabal
data/: test01.opml
src/lib/Web/: HRSS.hs
src/lib/Web/HRSS/Data/: Atom.hs  OPML.hs
src/main/: main.hs
src/test/: AtomTestCases.hs  OPMLTestCases.hs  main.hs
